sys/fs/fuse/fuse_node.c
@@ -293,7 +293,22 @@ fuse_vnode_get(struct mount *mp,
 	    (feo->entry_valid != 0 || feo->entry_valid_nsec != 0)) {
 		ASSERT_VOP_LOCKED(*vpp, "fuse_vnode_get");
 		ASSERT_VOP_LOCKED(dvp, "fuse_vnode_get");
-		cache_enter(dvp, *vpp, cnp);
+		if (fuse_lookup_cache_expire) {
+			struct timespec duration, now, timeout;
+
+			getnanouptime(&now);
+			if (feo->entry_valid >= INT_MAX ||
+			    feo->entry_valid + now.tv_sec + 2 >= INT_MAX) {
+				timeout.tv_sec = INT_MAX;
+			} else {
+				duration.tv_sec = feo->entry_valid;
+				duration.tv_nsec = feo->entry_valid_nsec;
+				timespecadd(&duration, &now, &timeout);
+			}
+			cache_enter_time(dvp, *vpp, cnp, &timeout, NULL);
+		} else {
+			cache_enter(dvp, *vpp, cnp);
+		}
 	}
 
 	/*
